@@ -1,3 +1,5 @@
+* Add sale, purchase or other kind on Tax Rule and Tax Group
+
 Version 2.6.0 - 2012-10-22
 * Bug fixes (see mercurial logs for details)
 * Rename:
